@@ -1,5 +1,15 @@
 2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-typify.c (pkl_typify1_ps_funcall): Improve
+	diagnostics.
+	* testsuite/poke.pkl/funcall-diag-5.pk: Update expected error.
+	* testsuite/poke.pkl/funcall-diag-6.pk: New test.
+	* testsuite/poke.pkl/funcall-diag-7.pk: Likewise.
+	* testsuite/poke.pkl/funcall-diag-8.pk (foo): Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+
+2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-typify.c (pkl_typify1_ps_type_array): Improve
 	diagnostics.
 	* testsuite/poke.pkl/array-bound-diag-1.pk: New test.
